--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravelcollective/html": "^5.7"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
